# ChangeLog for net-p2p/freenet
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  03 Sep 2008; Thomas Sachau (Tommy[D]) <tommy@gentoo.org>
  freenet-0.7_p1160.ebuild, freenet-9999-r1.ebuild:
  Use db-je:3.3

  02 Sep 2008; Thomas Sachau (Tommy[D]) <tommy@gentoo.org>
  -freenet-0.7_p1158.ebuild, +freenet-0.7_p1160.ebuild:
  New upstream release

  22 Aug 2008; Thomas Sachau (Tommy[D]) <tommy@gentoo.org> files/freenet,
  files/freenet.old:
  Fix init script

  22 Aug 2008; Thomas Sachau (Tommy[D]) <tommy@gentoo.org>
  freenet-9999-r1.ebuild:
  Drop keywords on live ebuild

  20 Aug 2008; Thomas Sachau (Tommy[D]) <tommy@gentoo.org>
  -freenet-0.7_p1155-r1.ebuild, +freenet-0.7_p1158.ebuild,
  freenet-9999-r1.ebuild:
  New upstream release + update live ebuild

  11 Aug 2008; Thomas Sachau (Tommy[D]) <tommy@gentoo.org>
  freenet-9999-r1.ebuild:
  Add missing symlinks

  10 Aug 2008; Thomas Sachau (Tommy[D]) <tommy@gentoo.org>
  freenet-9999-r1.ebuild:
  Fix truncated strings

  10 Aug 2008; Thomas Sachau (Tommy[D]) <tommy@gentoo.org>
  -files/wrapper.conf.patch:
  Delete obsolete patch

  10 Aug 2008; Thomas Sachau (Tommy[D]) <tommy@gentoo.org>
  -freenet-0.7_p1155.ebuild, +freenet-0.7_p1155-r1.ebuild,
  -freenet-9999.ebuild, +freenet-9999-r1.ebuild, files/freenet,
  files/freenet.old, files/wrapper.conf.patch, +files/wrapper1.conf:
  Update install location

  08 Aug 2008; Thomas Sachau (Tommy[D]) <tommy@gentoo.org>
  -freenet-0.7_p1154.ebuild, +freenet-0.7_p1155.ebuild:
  New upstream release

  04 Aug 2008; Thomas Sachau (Tommy[D]) <tommy@gentoo.org>
  freenet-9999.ebuild:
  Use subversion eclass for second checkout

  28 Jul 2008; Thomas Sachau (Tommy[D]) <tommy@gentoo.org>
  freenet-0.7_p1154.ebuild, freenet-9999.ebuild:
  Remove hardcoded path, thanks to gentoofan23 and drac

  22 Jul 2008; Thomas Sachau (Tommy[D]) <tommy@gentoo.org>
  freenet-9999.ebuild:
  Simplify

  22 Jul 2008; Thomas Sachau (Tommy[D]) <tommy@gentoo.org>