@@ -1,10 +1,10 @@
 AUX ext.patch 4954 RMD160 57fb8ecf9be8900a1ad54306d5c4df1eef6acd80 SHA1 3f9eaacdac0165f22ab6fe368140b820b93191b2 SHA256 206205dcf18ae6ad641fcb9f620b605aea47ed6b078296b41476ac3074045325
 AUX freenet 667 RMD160 3b27107bc1c7ce786621817aedbd51bef8d87281 SHA1 b2e1c5ee6df53e41533a7f24acac4531eb2b0c4b SHA256 3112937e3ea474a9e9624aaf841b9f52007abb2f48b0c3b9b1e886b882318c84
 AUX freenet.old 643 RMD160 be7dc68fed6caf7062f9b3250be6223513d375ff SHA1 50f706994d7fba56e3b38fdbc2998b246147d713 SHA256 8396eea93c2dcb8c7ce7d8659d0da22e06992867c8d57526c634455395334f72
-AUX wrapper1.conf 1792 RMD160 7c753a0e5c83967442eb51e4c58584ee7eec5a30 SHA1 22ed0fed5000dbe0101c9fc50964cae8f3f0ddc9 SHA256 50d541d1a004c05ce68ed7bbc37e052baef5f8ffd2f50c999dd81bb5e6dce3a1
-DIST freenet-0.7_p1160.tar.bz2 2159257 RMD160 ede72b1f37dcdf97b1d72c323a303faef34b0f8e SHA1 d55f6de5aa2983f589a3eb8cc9b8737d788570ae SHA256 ba505c4beeb4b341ebd66407e2377e574c78947dcec191305eaca014c663efb7
-DIST seednodes-20080820.fref 38625 RMD160 3ec724b07c1724bf56e6acf02acae6f76d2aa8c8 SHA1 49038622b68957fd5b02e28529ada22ce8628db3 SHA256 f6ac96938d7c02b28432de3d2eb4fc3644ad87bd23de9117acbc02b50aeca6a6
-EBUILD freenet-0.7_p1160.ebuild 3112 RMD160 88cb316e6a9500094461de330a09404c02b02f86 SHA1 16b6f7201b378108e2327b0642f41832b631e3b5 SHA256 ed358a8ffd21c3fc1b35ad04d229c5e727708f0a11521741fcea3fe17265fad4
-EBUILD freenet-9999-r1.ebuild 3728 RMD160 4ae694724a5c29546cf96486c6c9b7b7f37e5167 SHA1 71c8b0cdd35a50a744631a0f6786a1809b2f2cb1 SHA256 4b40e168b87b0770c2f52055f32f9d9ffc2ded04e0905d25a8e449510e7131cc
-MISC ChangeLog 12691 RMD160 c20cfb0b85e0925f331a6bd81790f00d4adf9492 SHA1 0b6a9c02918a371a618f3abfae6391d2551e9fae SHA256 e5900759045a0e17968da6a69e0bc9025fceb78e14c9f57f7a8a086835a2eeb4
+AUX wrapper1.conf 1846 RMD160 b75534061632064f7ebd9153260b021a7f23c076 SHA1 b6df84ded6f31b1a2c0757cdf7c8736e9b744181 SHA256 00b09246fd598c6ce13836d79104e4964de538ac1d9b3af6fa7bf240f142ca00
+DIST freenet-0.7_p1162.tar.bz2 2246529 RMD160 3dad79df76f3671d778121eadac9a8b51bf9a362 SHA1 a2829a13bae1547918f44969f11eb4517335fe6f SHA256 48c2bee61d74d5125c6616acd5ba510176229fa2b7df4c13c1f86c08b0dfed5c
+DIST seednodes-20080907.fref 40223 RMD160 73953e859d82aaaa1d38de1d6526c40b5adec81d SHA1 c32af5a752f368790c560d99888dba3ae7f99572 SHA256 9c6ecebbdf68ead6d3b70ca54fd0da1d004a67b2d0db32907c835d9c01af6065
+EBUILD freenet-0.7_p1162.ebuild 3151 RMD160 e4c5611f7237ccc52f3a2172dd354999598d4f62 SHA1 d57f210c8a817056e99e895bc92ac4e8bbb5265a SHA256 882331970c06a376cbd0b2be4a79880d579bce7c20c11b04b180c1d6016cb657
+EBUILD freenet-9999-r1.ebuild 3767 RMD160 3c3b7010c02afa9ad14ab30884534ba19ea21efb SHA1 e6f750ee1b43be76f0fa46599a1bbac3806660ea SHA256 00a1d58c73ab1ddc24fd9fd77cc88ceccdc8b7a993d138e69f5ca6cdab8e7a1a
+MISC ChangeLog 12898 RMD160 5adb6326fbf02b75136cc0d6d3ddd0c0fd2984cc SHA1 3315b2de1328950f776342d7ef29295402b97754 SHA256 789cd853478d5841d23d2f833161784c86bba63bca8a902964fc4862a2e178ab
 MISC metadata.xml 170 RMD160 645927a396fdc21cdeb089fe42c5397332420ea6 SHA1 ac7f48a14fec325926f9ce1be8fbf1f311b4f2e4 SHA256 d797a2ec6f9dc516c9f9c1a758ee87ad3e8c43101b5dc76c2f872d5bd4639b42
