@@ -5,6 +5,7 @@ wrapper.java.classpath.1=/usr/share/freenet/lib/freenet.jar
 wrapper.java.classpath.2=/usr/share/java-service-wrapper/lib/wrapper.jar
 wrapper.java.classpath.3=/usr/share/db-je-3.3/lib/je.jar
 wrapper.java.classpath.4=/usr/share/fec/lib/fec.jar
+wrapper.java.classpath.5=/usr/share/db4o/lib/db4o.jar
 wrapper.java.library.path.1=lib
 wrapper.java.initmemory=60
 wrapper.java.maxmemory=128
